[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/PlayerShip.gd" type="Script" id=1]
[ext_resource path="res://images/blueship.png" type="Texture" id=2]

[node name="PlayerShip" type="KinematicBody2D" groups=[
"player",
"humans",
]]
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
motion/sync_to_physics = false
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
build_mode = 0
polygon = PoolVector2Array( 110, -10, 75.0618, -26.0155, 36.8369, -31.1612, 25.0755, -37.0419, 0.817383, -29.691, -13.8845, -42.1876, -17.5599, -57.6245, 12.5789, -74.5317, 8.90341, -87.0283, -13.8845, -114.962, -40.3478, -117.902, -57.9901, -100.995, -126.354, -91.4388, -124.884, -81.8826, -86.6587, -68.6509, -53.5795, -63.5053, -70.4866, -44.3929, -98.4202, -41.4525, -126.354, -29.691, -124.148, 30.5866, -100.625, 41.613, -64.6059, 42.3481, -54.3146, 59.2552, -82.2481, 67.3413, -124.884, 79.8379, -124.148, 88.659, -63.8708, 99.6854, -41.0829, 114.387, -17.5599, 112.182, 16.2543, 79.8379, -18.295, 52.6394, -21.9705, 40.1428, 4.49286, 29.1165, 22.8702, 34.9972, 81.6776, 23.2357, 106.671, 7.06366 )
__meta__ = {
"_edit_lock_": true
}

[node name="FiringPosition" type="Position2D" parent="."]
position = Vector2( 134, 0 )

[node name="LeftPosition" type="Position2D" parent="."]
position = Vector2( 40, -80 )

[node name="RightPosition" type="Position2D" parent="."]
position = Vector2( 40, 80 )

